apps/infra/kong-gateway/chart/httproute-kong-manager.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kong-manager
  namespace: kong-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  parentRefs:
    - name: shared-gateway
      namespace: gateway-api
  hostnames:
    - "kong.hoangvu75.space"
  rules:
    # Route Admin API calls (Manager JS uses /8444 as path prefix on HTTPS)
    - matches:
        - path:
            type: PathPrefix
            value: /8444
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: kong-admin
          port: 8001
    # Route Manager UI
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
              - name: X-Forwarded-Port
                value: "443"
      backendRefs:
        - name: kong-manager
          port: 8002
